# economic-signal-engine

./: README.md  pyproject.toml
configs/: rules.yaml  schedules.yaml  sources.yaml
src/economic_signal_engine.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
src/ese/: __main__.py
src/ese/cli/: compute.py  ingest.py  report.py  run.py  signal.py  validate.py
